tests/e2e-openshift/monolithic-route/install-tempo.yaml
apiVersion: tempo.grafana.com/v1alpha1
kind: TempoMonolithic
metadata:
  name: mono-route
  namespace: chainsaw-mono-route
spec:
  jaegerui:
    enabled: true
    route:
      enabled: true
