tests/e2e-openshift/monolithic-route/00-install-tempo-assert.yaml
apiVersion: tempo.grafana.com/v1alpha1
kind: TempoMonolithic
metadata:
  name: mono-route
  namespace: chainsaw-mono-route
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: tempo
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
  name: tempo-mono-route
  namespace: chainsaw-mono-route
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: tempo
      app.kubernetes.io/instance: mono-route
      app.kubernetes.io/managed-by: tempo-operator
      app.kubernetes.io/name: tempo-monolithic
  template:
    metadata:
      labels:
        app.kubernetes.io/component: tempo
        app.kubernetes.io/instance: mono-route
        app.kubernetes.io/managed-by: tempo-operator
        app.kubernetes.io/name: tempo-monolithic
    spec:
      containers:
      - args:
        - -config.file=/conf/tempo.yaml
        - -mem-ballast-size-mbs=1024
        - -log.level=info
        - -config.expand-env=true
        name: tempo
        ports:
        - containerPort: 3200
          name: http
          protocol: TCP
        - containerPort: 3101
          name: tempo-internal
          protocol: TCP
        - containerPort: 4317
          name: otlp-grpc
          protocol: TCP
        - containerPort: 4318
          name: otlp-http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: tempo-internal
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /conf
          name: tempo-conf
          readOnly: true
        - mountPath: /var/tempo
          name: tempo-storage
      - args:
        - --query.base-path=/
        - --span-storage.type=grpc
        - --grpc-storage.server=localhost:7777
        - --query.bearer-token-propagation=true
        name: jaeger-query
        ports:
        - containerPort: 16685
          name: jaeger-grpc
          protocol: TCP
        - containerPort: 16686
          name: jaeger-ui
          protocol: TCP
        - containerPort: 16687
          name: jaeger-metrics
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tempo-query-tmp
      - args:
        - -config=/conf/tempo-query.yaml
        name: tempo-query
        ports:
        - containerPort: 7777
          name: proxy-grpc
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /conf
          name: tempo-conf
          readOnly: true
      - args:
        - --cookie-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - --https-address=:8443
        - --openshift-service-account=tempo-mono-route
        - --provider=openshift
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --upstream=http://localhost:16686
        - --upstream-timeout=2m0s
        - '--openshift-sar={"namespace": "chainsaw-mono-route", "resource": "pods",
          "verb": "get"}'
        name: oauth-proxy
        ports:
        - containerPort: 8443
          name: oauth-proxy
          protocol: TCP
      volumes:
      - configMap:
          defaultMode: 420
          name: tempo-mono-route-config
        name: tempo-conf
      - emptyDir:
          medium: Memory
          sizeLimit: 2Gi
        name: tempo-storage
      - emptyDir: {}
        name: tempo-query-tmp
      - name: mono-route-ui-oauth-proxy-tls
        secret:
          defaultMode: 420
          secretName: mono-route-ui-oauth-proxy-tls
status:
  availableReplicas: 1
  currentReplicas: 1
  readyReplicas: 1
  replicas: 1
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/component: tempo
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
  namespace: chainsaw-mono-route
status:
  containerStatuses:
  - name: jaeger-query
    ready: true
    started: true
  - name: oauth-proxy
    ready: true
    started: true
  - name: tempo
    ready: true
    started: true
  - name: tempo-query
    ready: true
    started: true
  phase: Running
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: tempo
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
  name: tempo-mono-route
  namespace: chainsaw-mono-route
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3200
    protocol: TCP
    targetPort: http
  - name: otlp-grpc
    port: 4317
    protocol: TCP
    targetPort: otlp-grpc
  - name: otlp-http
    port: 4318
    protocol: TCP
    targetPort: otlp-http
  selector:
    app.kubernetes.io/component: tempo
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: jaegerui
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
  name: tempo-mono-route-jaegerui
  namespace: chainsaw-mono-route
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: jaeger-grpc
    port: 16685
    protocol: TCP
    targetPort: jaeger-grpc
  - name: jaeger-ui
    port: 16686
    protocol: TCP
    targetPort: jaeger-ui
  - name: jaeger-metrics
    port: 16687
    protocol: TCP
    targetPort: jaeger-metrics
  - name: oauth-proxy
    port: 8443
    protocol: TCP
    targetPort: oauth-proxy
  selector:
    app.kubernetes.io/component: tempo
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic

---
apiVersion: v1
data:
  tempo-query.yaml: |
    address: 0.0.0.0:7777
    backend: localhost:3200
    tenant_header_key: x-scope-orgid
    services_query_duration: 72h0m0s
    find_traces_concurrent_requests: 2
  tempo.yaml: |
    server:
      http_listen_port: 3200
      http_server_read_timeout: 2m0s
      http_server_write_timeout: 2m0s
    internal_server:
      enable: true
      http_listen_address: 0.0.0.0
    storage:
      trace:
        backend: local
        wal:
          path: /var/tempo/wal
        local:
          path: /var/tempo/blocks
    distributor:
      receivers:
        otlp:
          protocols:
            grpc:
              endpoint: 0.0.0.0:4317
            http:
              endpoint: 0.0.0.0:4318
    usage_report:
      reporting_enabled: false
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: config
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
  name: tempo-mono-route-config

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 120s
  labels:
    app.kubernetes.io/component: jaegerui
    app.kubernetes.io/instance: mono-route
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo-monolithic
  name: tempo-mono-route-jaegerui
spec:
  port:
    targetPort: oauth-proxy
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: tempo-mono-route-jaegerui
    weight: 100
  wildcardPolicy: None
